사이드바 수정

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,14 +1,19 @@
-<!-- html/sidebar.html -->
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="UTF-8">
-    <title>Sidebar</title>
+    <title>My Playlist</title>
+    <link rel="stylesheet" href="../css/sidebar.css">
 </head>
 
 <body>
-    <h1 style="padding: 20px;">👋 사이드바입니다!</h1>
+    <div id="sidebar-root">
+        <h2>🎵 내 재생목록</h2>
+        <ul id="playlist"></ul>
+    </div>
+
+    <script src="../js/sidebar.js"></script>
 </body>
 
 </html>
