드래그 앤 드롭 삭제

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -12,6 +12,10 @@
         <h2>🎵 내 재생목록</h2>
         <ul id="playlist"></ul>
     </div>
+    <div id="input-area">
+        <input type="text" id="video-url" placeholder="유튜브 링크 붙여넣기" />
+        <button id="save-btn">저장</button>
+    </div>
 
     <script src="../js/sidebar.js"></script>
 </body>
