수동 테마 적용 추가

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -9,12 +9,17 @@
 
 <body>
     <div id="sidebar-root">
-        <h2>🎵 내 재생목록</h2>
+        <div id="header">
+            <h2>🎵 내 재생목록</h2>
+            <button id="theme-toggle" title="테마 변경">⚙</button>
+        </div>
+
+        <div id="input-area">
+            <input type="text" id="video-url" placeholder="유튜브 링크 붙여넣기" />
+            <button id="save-btn">저장</button>
+        </div>
+
         <ul id="playlist"></ul>
-    </div>
-    <div id="input-area">
-        <input type="text" id="video-url" placeholder="유튜브 링크 붙여넣기" />
-        <button id="save-btn">저장</button>
     </div>
 
     <script src="../js/sidebar.js"></script>
