--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -11,7 +11,21 @@
     <div id="sidebar-root">
         <div id="header">
             <h2>🎵 내 재생목록</h2>
-            <button id="theme-toggle" title="테마 변경">⚙</button>
+            <div id="settings-container">
+                <button id="theme-toggle" title="설정">⚙</button>
+                <div id="dropdown" class="hidden">
+                    <label>🎨 테마</label>
+                    <select id="theme-select">
+                        <option value="light">밝은 테마</option>
+                        <option value="dark">어두운 테마</option>
+                    </select>
+                    <label>🌐 언어</label>
+                    <select id="lang-select">
+                        <option value="ko">한국어</option>
+                        <option value="en">English</option>
+                    </select>
+                </div>
+            </div>
         </div>
 
         <div id="input-area">
