닫기 버튼 및 기능 추가

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -9,6 +9,7 @@
 
 <body>
     <div id="sidebar-root">
+        <button id="close-btn" title="닫기">✖</button>
         <div id="header">
             <h2>🎵 내 재생목록</h2>
             <div id="settings-container">
