디자인 수정

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -10,10 +10,12 @@
 <body>
     <div id="sidebar-root">
         <div id="header">
-            <h2>🎵 내 재생목록</h2>
-            <button id="close-btn" title="닫기">✖</button>
-            <div id="settings-container">
+            <div id="top-controls">
                 <button id="theme-toggle" title="설정">⚙</button>
+                <button id="close-btn" title="닫기">✖</button>
+            </div>
+            <h2>🎵 내 재생목록</h2>
+            <div id="settings-container">
                 <div id="dropdown" class="hidden">
                     <label>🎨 테마</label>
                     <select id="theme-select">
