--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -32,7 +32,9 @@
         </div>
 
         <div id="input-area">
-            <input type="text" id="video-url" placeholder="유튜브 링크 붙여넣기" />
+            <div id="drop-zone">
+                <input type="text" id="video-url" placeholder="유튜브 링크 붙여넣기" />
+            </div>
             <button id="save-btn">저장</button>
         </div>
 
