--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -38,6 +38,7 @@
 
         <ul id="playlist"></ul>
     </div>
+    <div id="toast" class="hidden">안내 메시지</div>
 
     <script src="../js/sidebar.js"></script>
 </body>
