언어 설정 수정

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -17,12 +17,12 @@
             <h2>🎵 내 재생목록</h2>
             <div id="settings-container">
                 <div id="dropdown" class="hidden">
-                    <label>🎨 테마</label>
+                    <label id="theme-label">🎨 테마</label>
                     <select id="theme-select">
                         <option value="light">밝은 테마</option>
                         <option value="dark">어두운 테마</option>
                     </select>
-                    <label>🌐 언어</label>
+                    <label id="lang-label">🌐 언어</label>
                     <select id="lang-select">
                         <option value="ko">한국어</option>
                         <option value="en">English</option>
