--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>My Playlist</title>
     <link rel="stylesheet" href="../css/sidebar.css">
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 </head>
 
 <body>
