--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -40,6 +40,7 @@
         <ul id="playlist"></ul>
     </div>
     <div id="toast" class="hidden">안내 메시지</div>
+    <div id="tooltip" class="hidden"></div>
 
     <script src="../js/sidebar.js"></script>
 </body>
