--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -34,6 +34,7 @@
         <div id="input-area">
             <input type="text" id="video-url" placeholder="유튜브 링크 붙여넣기" />
             <button id="save-btn">저장</button>
+            <button id="add-current-btn">현재 영상 추가</button>
         </div>
 
         <ul id="playlist"></ul>
