버튼 그룹 디자인

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -33,8 +33,10 @@
         </div>
         <div id="input-area">
             <input type="text" id="video-url" placeholder="유튜브 링크 붙여넣기" />
-            <button id="save-btn">저장</button>
-            <button id="add-current-btn">현재 영상 추가</button>
+            <div id="button-group">
+                <button id="save-btn">저장</button>
+                <button id="add-current-btn">현재 영상 추가</button>
+            </div>
         </div>
 
         <ul id="playlist"></ul>
